--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 13-Nov-2024]</h6>
+<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1031,10 +1031,10 @@
 <td class='VargaStyle1'>अनू᳚नो॒दत्र॒हस्त॑यतो॒,अद्रि॒रार्च॒न्‌येन॒दश॑मा॒सोनव॑ग्वाः |<p>ऋ॒तंय॒तीस॒रमा॒गा,अ॑विन्द॒द्विश्वा᳚निस॒त्याङ्गि॑राश्चकार || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>विश्वे᳚,अ॒स्याव्युषि॒माहि॑नायाः॒संयद्‌गोभि॒रङ्गि॑रसो॒नव᳚न्त |<p>उत्स॑आसांपर॒मेस॒धस्थ॑ऋ॒तस्य॑प॒थास॒रमा᳚विद॒द्गाः || 8 || </td>
+<td class='VargaStyle1'>विश्वे᳚,अ॒स्याव्युषि॒माहि॑नायाः॒संयद्‌गोभि॒रङ्गि॑रसो॒नव᳚न्त |<p>उत्स॑आसांपर॒मेस॒धस्थ॑ऋ॒तस्य॑प॒थास॒रमा᳚विद॒द्‌गाः || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आसूर्यो᳚यातुस॒प्ताश्वः॒,क्षेत्रं॒यद॑स्योर्वि॒यादी᳚र्घया॒थे |<p>र॒घुःश्ये॒नःप॑तय॒दन्धो॒,अच्छा॒युवा᳚क॒विर्दी᳚दय॒द्गोषु॒गच्छ॑न् || 9 || </td>
+<td class='VargaStyle1'>आसूर्यो᳚यातुस॒प्ताश्वः॒,क्षेत्रं॒यद॑स्योर्वि॒यादी᳚र्घया॒थे |<p>र॒घुःश्ये॒नःप॑तय॒दन्धो॒,अच्छा॒युवा᳚क॒विर्दी᳚दय॒द्‌गोषु॒गच्छ॑न् || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>आसूर्यो᳚,अरुहच्छु॒क्रमर्णोऽयु॑क्त॒यद्ध॒रितो᳚वी॒तपृ॑ष्ठाः |<p>उ॒द्नाननाव॑मनयन्त॒धीरा᳚,आशृण्व॒तीरापो᳚,अ॒र्वाग॑तिष्ठन् || 10 || </td>
