--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format1/RVS-Devanagari-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format1/RVS-Devanagari-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 13-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1308,10 +1308,10 @@
 <td class='VargaStyle1'>अनू᳚नो॒दत्र॒ हस्त॑यतो॒, अद्रि॒रार्च॒न्‌ येन॒ दश॑ मा॒सो नव॑ग्वाः |<span class='RishiDevChandas'>{आत्रेयः सदापृणः | विश्वदेवाः | त्रिष्टुप्}</span><p>ऋ॒तं य॒ती स॒रमा॒ गा, अ॑विन्द॒द् विश्वा᳚नि स॒त्याङ्गि॑राश्चकार ||<span class='MantraNumbering'>{7/11}{5.45.7}{5.4.1.7}{4.2.27.2}{399, 4028}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>विश्वे᳚, अ॒स्या व्युषि॒ माहि॑नायाः॒ सं यद्‌ गोभि॒रङ्गि॑रसो॒ नव᳚न्त |<span class='RishiDevChandas'>{आत्रेयः सदापृणः | विश्वदेवाः | त्रिष्टुप्}</span><p>उत्स॑ आसां पर॒मे स॒धस्थ॑ ऋ॒तस्य॑ प॒था स॒रमा᳚ विद॒द्गाः ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
+<td class='VargaStyle1'>विश्वे᳚, अ॒स्या व्युषि॒ माहि॑नायाः॒ सं यद्‌ गोभि॒रङ्गि॑रसो॒ नव᳚न्त |<span class='RishiDevChandas'>{आत्रेयः सदापृणः | विश्वदेवाः | त्रिष्टुप्}</span><p>उत्स॑ आसां पर॒मे स॒धस्थ॑ ऋ॒तस्य॑ प॒था स॒रमा᳚ विद॒द्‌ गाः ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आ सूर्यो᳚ यातु स॒प्ताश्वः॒, क्षेत्रं॒ यद॑स्योर्वि॒या दी᳚र्घया॒थे |<span class='RishiDevChandas'>{आत्रेयः सदापृणः | विश्वदेवाः | त्रिष्टुप्}</span><p>र॒घुः श्ये॒नः प॑तय॒दन्धो॒, अच्छा॒ युवा᳚ क॒विर्दी᳚दय॒द्गोषु॒ गच्छ॑न् ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
+<td class='VargaStyle1'>आ सूर्यो᳚ यातु स॒प्ताश्वः॒, क्षेत्रं॒ यद॑स्योर्वि॒या दी᳚र्घया॒थे |<span class='RishiDevChandas'>{आत्रेयः सदापृणः | विश्वदेवाः | त्रिष्टुप्}</span><p>र॒घुः श्ये॒नः प॑तय॒दन्धो॒, अच्छा॒ युवा᳚ क॒विर्दी᳚दय॒द्‌ गोषु॒ गच्छ॑न् ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>आ सूर्यो᳚, अरुहच्छु॒क्रमर्णोऽयु॑क्त॒ यद्ध॒रितो᳚ वी॒तपृ॑ष्ठाः |<span class='RishiDevChandas'>{आत्रेयः सदापृणः | विश्वदेवाः | त्रिष्टुप्}</span><p>उ॒द्ना न नाव॑मनयन्त॒ धीरा᳚, आशृण्व॒तीरापो᳚, अ॒र्वाग॑तिष्ठन् ||<span class='MantraNumbering'>{10/11}{5.45.10}{5.4.1.10}{4.2.27.5}{399, 4031}</span></td>
