--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1296,22 +1296,22 @@
 <td class='VargaStyle2'>ಅ॒ಸ್ಮಾ, ಉ॒ಕ್ಥಾಯ॒ ಪರ್‍ವ॑ತಸ್ಯ॒ ಗರ್ಭೋ᳚ ಮ॒ಹೀನಾಂ᳚ ಜ॒ನುಷೇ᳚ ಪೂ॒ರ್‍ವ್ಯಾಯ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಿ ಪರ್‍ವ॑ತೋ॒ ಜಿಹೀ᳚ತ॒ ಸಾಧ॑ತ॒ ದ್ಯೌರಾ॒ವಿವಾ᳚ಸಂತೋ ದಸಯಂತ॒ ಭೂಮ॑ ||<span class='MantraNumbering'>{3/11}{5.45.3}{5.4.1.3}{4.2.26.3}{399, 4024}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಸೂ॒ಕ್ತೇಭಿ᳚ರ್ವೋ॒ ವಚೋ᳚ಭಿರ್ದೇ॒ವಜು॑ಷ್ಟೈ॒ರಿಂದ್ರಾ॒ ನ್ವ೧॑(ಅ॒)ಗ್ನೀ, ಅವ॑ಸೇ ಹು॒ವಧ್ಯೈ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಕ್ಥೇಭಿ॒ರ್ಹಿ ಷ್ಮಾ᳚ ಕ॒ವಯಃ॑ ಸುಯ॒ಜ್ಞಾ, ಆ॒ವಿವಾ᳚ಸಂತೋ ಮ॒ರುತೋ॒ ಯಜಂ᳚ತಿ ||<span class='MantraNumbering'>{4/11}{5.45.4}{5.4.1.4}{4.2.26.4}{399, 4025}</span></td>
+<td class='VargaStyle2'>ಸೂ॒ಕ್ತೇಭಿ᳚ರ್ವೋ॒ ವಚೋ᳚ಭಿರ್‌ದೇ॒ವಜು॑ಷ್ಟೈ॒ರಿಂದ್ರಾ॒ ನ್ವ೧॑(ಅ॒)ಗ್ನೀ, ಅವ॑ಸೇ ಹು॒ವಧ್ಯೈ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಕ್ಥೇಭಿ॒ರ್ಹಿ ಷ್ಮಾ᳚ ಕ॒ವಯಃ॑ ಸುಯ॒ಜ್ಞಾ, ಆ॒ವಿವಾ᳚ಸಂತೋ ಮ॒ರುತೋ॒ ಯಜಂ᳚ತಿ ||<span class='MantraNumbering'>{4/11}{5.45.4}{5.4.1.4}{4.2.26.4}{399, 4025}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಏತೋ॒ ನ್ವ೧॑(ಅ॒)ದ್ಯ ಸು॒ಧ್ಯೋ॒೩॑(ಓ॒) ಭವಾ᳚ಮ॒ ಪ್ರ ದು॒ಚ್ಛುನಾ᳚ ಮಿನವಾಮಾ॒ ವರೀ᳚ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ॒ರೇ ದ್ವೇಷಾಂ᳚ಸಿ ಸನು॒ತರ್‌ದ॑ಧಾ॒ಮಾಽಯಾ᳚ಮ॒ ಪ್ರಾಂಚೋ॒ ಯಜ॑ಮಾನ॒ಮಚ್ಛ॑ ||<span class='MantraNumbering'>{5/11}{5.45.5}{5.4.1.5}{4.2.26.5}{399, 4026}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಏತಾ॒ ಧಿಯಂ᳚ ಕೃ॒ಣವಾ᳚ಮಾ ಸಖಾ॒ಯೋ ಽಪ॒ ಯಾ ಮಾ॒ತಾಁ, ಋ॑ಣು॒ತ ವ್ರ॒ಜಂ ಗೋಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಯಾ॒ ಮನು᳚ರ್ವಿಶಿಶಿ॒ಪ್ರಂ ಜಿ॒ಗಾಯ॒ ಯಯಾ᳚ ವ॒ಣಿಗ್ವಂ॒ಕುರಾಪಾ॒ ಪುರೀ᳚ಷಂ ||<span class='MantraNumbering'>{6/11}{5.45.6}{5.4.1.6}{4.2.27.1}{399, 4027}</span></td>
+<td class='VargaStyle1'>ಏತಾ॒ ಧಿಯಂ᳚ ಕೃ॒ಣವಾ᳚ಮಾ ಸಖಾ॒ಯೋ ಽಪ॒ ಯಾ ಮಾ॒ತಾಁ, ಋ॑ಣು॒ತ ವ್ರ॒ಜಂ ಗೋಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಯಾ॒ ಮನು᳚ರ್‌ವಿಶಿಶಿ॒ಪ್ರಂ ಜಿ॒ಗಾಯ॒ ಯಯಾ᳚ ವ॒ಣಿಗ್ವಂ॒ಕುರಾಪಾ॒ ಪುರೀ᳚ಷಂ ||<span class='MantraNumbering'>{6/11}{5.45.6}{5.4.1.6}{4.2.27.1}{399, 4027}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅನೂ᳚ನೋ॒ದತ್ರ॒ ಹಸ್ತ॑ಯತೋ॒, ಅದ್ರಿ॒ರಾರ್ಚ॒ನ್‌ ಯೇನ॒ ದಶ॑ ಮಾ॒ಸೋ ನವ॑ಗ್ವಾಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಋ॒ತಂ ಯ॒ತೀ ಸ॒ರಮಾ॒ ಗಾ, ಅ॑ವಿಂದ॒ದ್‌ ವಿಶ್ವಾ᳚ನಿ ಸ॒ತ್ಯಾಂಗಿ॑ರಾಶ್ಚಕಾರ ||<span class='MantraNumbering'>{7/11}{5.45.7}{5.4.1.7}{4.2.27.2}{399, 4028}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಶ್ವೇ᳚, ಅ॒ಸ್ಯಾ ವ್ಯುಷಿ॒ ಮಾಹಿ॑ನಾಯಾಃ॒ ಸಂ ಯದ್‌ ಗೋಭಿ॒ರಂಗಿ॑ರಸೋ॒ ನವಂ᳚ತ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉತ್ಸ॑ ಆಸಾಂ ಪರ॒ಮೇ ಸ॒ಧಸ್ಥ॑ ಋ॒ತಸ್ಯ॑ ಪ॒ಥಾ ಸ॒ರಮಾ᳚ ವಿದ॒ದ್ಗಾಃ ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
+<td class='VargaStyle1'>ವಿಶ್ವೇ᳚, ಅ॒ಸ್ಯಾ ವ್ಯುಷಿ॒ ಮಾಹಿ॑ನಾಯಾಃ॒ ಸಂ ಯದ್‌ ಗೋಭಿ॒ರಂಗಿ॑ರಸೋ॒ ನವಂ᳚ತ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉತ್ಸ॑ ಆಸಾಂ ಪರ॒ಮೇ ಸ॒ಧಸ್ಥ॑ ಋ॒ತಸ್ಯ॑ ಪ॒ಥಾ ಸ॒ರಮಾ᳚ ವಿದ॒ದ್‌ ಗಾಃ ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆ ಸೂರ್‍ಯೋ᳚ ಯಾತು ಸ॒ಪ್ತಾಶ್ವಃ॒, ಕ್ಷೇತ್ರಂ॒ ಯದ॑ಸ್ಯೋರ್‍ವಿ॒ಯಾ ದೀ᳚ರ್ಘಯಾ॒ಥೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರ॒ಘುಃ ಶ್ಯೇ॒ನಃ ಪ॑ತಯ॒ದಂಧೋ॒, ಅಚ್ಛಾ॒ ಯುವಾ᳚ ಕ॒ವಿರ್ದೀ᳚ದಯ॒ದ್ಗೋಷು॒ ಗಚ್ಛ॑ನ್ ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
+<td class='VargaStyle1'>ಆ ಸೂರ್‍ಯೋ᳚ ಯಾತು ಸ॒ಪ್ತಾಶ್ವಃ॒, ಕ್ಷೇತ್ರಂ॒ ಯದ॑ಸ್ಯೋರ್‍ವಿ॒ಯಾ ದೀ᳚ರ್ಘಯಾ॒ಥೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರ॒ಘುಃ ಶ್ಯೇ॒ನಃ ಪ॑ತಯ॒ದಂಧೋ॒, ಅಚ್ಛಾ॒ ಯುವಾ᳚ ಕ॒ವಿರ್ದೀ᳚ದಯ॒ದ್‌ ಗೋಷು॒ ಗಚ್ಛ॑ನ್ ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಆ ಸೂರ್‍ಯೋ᳚, ಅರುಹಚ್ಛು॒ಕ್ರಮರ್ಣೋಽಯು॑ಕ್ತ॒ ಯದ್ಧ॒ರಿತೋ᳚ ವೀ॒ತಪೃ॑ಷ್ಠಾಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ದ್ನಾ ನ ನಾವ॑ಮನಯಂತ॒ ಧೀರಾ᳚, ಆಶೃಣ್ವ॒ತೀರಾಪೋ᳚, ಅ॒ರ್‍ವಾಗ॑ತಿಷ್ಠನ್ ||<span class='MantraNumbering'>{10/11}{5.45.10}{5.4.1.10}{4.2.27.5}{399, 4031}</span></td>
