--- a/Rigveda/SamhitaPatha/Kannada/RVKHILA(Kannada).html
+++ b/Rigveda/SamhitaPatha/Kannada/RVKHILA(Kannada).html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br> [Last updated on: 13-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br> [Last updated on: 14-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -280,7 +280,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಚಂ॒ದ್ರಾಂ</span><span class='style2'>ಪ್ರ॑ಭಾ॒ಸಾಂ</span><span class='style1'>ಯ॒ಶಸಾ॒</span><span class='style2'>ಜ್ವಲಂ᳚ತೀಂ॒¦</span><span class='style1'>ಶ್ರಿಯಂ᳚</span><span class='style2'>ಲೋ॒ಕೇ</span><span class='style1'>ದೇ॒ವಜು॑ಷ್ಟಾಮುದಾ॒ರಾಂ</span> |<p><span class='style1'>ತಾಂ</span><span class='style2'>ಪ॒ದ್ಮಿನೀ᳚ಮೀಂ॒</span><span class='style1'>ಶರ॑ಣಮ॒ಹಂ</span><span class='style2'>ಪ್ರ</span><span class='style1'>ಪ॑ದ್ಯೇ¦ಽಲ॒ಕ್ಷ್ಮೀರ್ಮೇ᳚</span><span class='style2'>ನಶ್ಯತಾಂ॒</span><span class='style1'>ತ್ವಾಂ</span><span class='style2'>ವೃ॑ಣೇ</span><span class='style1'>[ವ:೧]</span> ||5|| 
+<span class='style1'>ಚಂ॒ದ್ರಾಂ</span><span class='style2'>ಪ್ರ॑ಭಾ॒ಸಾಂ</span><span class='style1'>ಯ॒ಶಸಾ॒</span><span class='style2'>ಜ್ವಲಂ᳚ತೀಂ॒¦</span><span class='style1'>ಶ್ರಿಯಂ᳚</span><span class='style2'>ಲೋ॒ಕೇ</span><span class='style1'>ದೇ॒ವಜು॑ಷ್ಟಾಮುದಾ॒ರಾಂ</span> |<p><span class='style1'>ತಾಂ</span><span class='style2'>ಪ॒ದ್ಮಿನೀ᳚ಮೀಂ॒</span><span class='style1'>ಶರ॑ಣಮ॒ಹಂ</span><span class='style2'>ಪ್ರ</span><span class='style1'>ಪ॑ದ್ಯೇ¦ಽಲ॒ಕ್ಷ್ಮೀರ್ಮೇ᳚</span><span class='style2'>ನಶ್ಯತಾಂ॒</span><span class='style1'>ತ್ವಾಂ</span><span class='style2'>ವೃ॑ಣೇ</span> ||5||[ವ:೧] 
 </td>
 </tr>
 <tr>
@@ -305,7 +305,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಮನ॑ಸಃ॒</span><span class='style2'>ಕಾಮ॒ಮಾಕೂ᳚ತಿಂ¦</span><span class='style1'>ವಾ॒ಚಃ</span><span class='style2'>ಸ॒ತ್ಯಮ॑ಶೀಮಹಿ</span> |<p><span class='style1'>ಪ॒ಶೂ॒ನಾಂ</span><span class='style2'>ರೂಪ॑ಮನ್ನ॒ಸ್ಯ¦</span><span class='style1'>ಮಯಿ॒</span><span class='style2'>ಶ್ರೀಃ</span><span class='style1'>ಶ್ರ॑ಯತಾಂ॒</span><span class='style2'>ಯಶಃ॑</span> [ವ:೨]||10|| 
+<span class='style1'>ಮನ॑ಸಃ॒</span><span class='style2'>ಕಾಮ॒ಮಾಕೂ᳚ತಿಂ¦</span><span class='style1'>ವಾ॒ಚಃ</span><span class='style2'>ಸ॒ತ್ಯಮ॑ಶೀಮಹಿ</span> |<p><span class='style1'>ಪ॒ಶೂ॒ನಾಂ</span><span class='style2'>ರೂಪ॑ಮನ್ನ॒ಸ್ಯ¦</span><span class='style1'>ಮಯಿ॒</span><span class='style2'>ಶ್ರೀಃ</span><span class='style1'>ಶ್ರ॑ಯತಾಂ॒</span><span class='style2'>ಯಶಃ॑</span> ||10||[ವ:೨] 
 </td>
 </tr>
 <tr>
@@ -330,7 +330,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ತಾಂ</span><span class='style2'>ಮ॒</span><span class='style1'>ಆವ॑ಹ</span><span class='style2'>ಜಾತವೇದೋ¦</span><span class='style1'>ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀಂ᳚</span> |<p><span class='style1'>ಯಸ್ಯಾಂ॒</span><span class='style2'>ಹಿರ᳚ಣ್ಯಂ॒</span><span class='style1'>ಪ್ರಭೂ᳚ತಂ॒</span><span class='style2'>ಗಾವೋ᳚¦</span><span class='style1'>ದಾ॒ಸ್ಯೋಽಶ್ವಾ᳚ನ್‌</span><span class='style2'>ವಿಂ॒ದೇಯಂ॒</span><span class='style1'>ಪುರು॑ಷಾನ॒ಹಂ</span> [ವ:೩]||15|| 
+<span class='style1'>ತಾಂ</span><span class='style2'>ಮ॒</span><span class='style1'>ಆವ॑ಹ</span><span class='style2'>ಜಾತವೇದೋ¦</span><span class='style1'>ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀಂ᳚</span> |<p><span class='style1'>ಯಸ್ಯಾಂ॒</span><span class='style2'>ಹಿರ᳚ಣ್ಯಂ॒</span><span class='style1'>ಪ್ರಭೂ᳚ತಂ॒</span><span class='style2'>ಗಾವೋ᳚¦</span><span class='style1'>ದಾ॒ಸ್ಯೋಽಶ್ವಾ᳚ನ್‌</span><span class='style2'>ವಿಂ॒ದೇಯಂ॒</span><span class='style1'>ಪುರು॑ಷಾನ॒ಹಂ</span> ||15||[ವ:೩] 
 </td>
 </tr>
 <tr>
@@ -360,7 +360,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಧನ॑ಮ॒ಗ್ನಿರ್ಧ॑ನಂ</span><span class='style2'>ವಾ॒ಯುರ್¦ಧನಂ॒</span><span class='style1'>ಸೂರ್‍ಯೋ᳚</span><span class='style2'>ಧನಂ॒</span><span class='style1'>ವಸುಃ॑</span> |<p><span class='style1'>ಧನ॒ಮಿಂದ್ರೋ॒</span><span class='style2'>ಬೃಹ॒ಸ್ಪತಿ॒ರ್¦ವರು॑ಣಂ॒</span><span class='style1'>ಧನ॒ಮಸ್ತು॑</span><span class='style2'>ತೇ</span> [ವ:೪]||21|| 
+<span class='style1'>ಧನ॑ಮ॒ಗ್ನಿರ್ಧ॑ನಂ</span><span class='style2'>ವಾ॒ಯುರ್¦ಧನಂ॒</span><span class='style1'>ಸೂರ್‍ಯೋ᳚</span><span class='style2'>ಧನಂ॒</span><span class='style1'>ವಸುಃ॑</span> |<p><span class='style1'>ಧನ॒ಮಿಂದ್ರೋ॒</span><span class='style2'>ಬೃಹ॒ಸ್ಪತಿ॒ರ್¦ವರು॑ಣಂ॒</span><span class='style1'>ಧನ॒ಮಸ್ತು॑</span><span class='style2'>ತೇ</span> ||21||[ವ:೪] 
 </td>
 </tr>
 <tr>
@@ -390,7 +390,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಶ್ರೀ॒ವರ್ಚ॑ಸ್ವ॒ಮಾಯು॑ಷ್ಯ॒ಮಾರೋ᳚ಗ್ಯ॒ಮಾವಿ॑ಧಾ॒¦ಚ್ಚೋಭ॑ಮಾನಂ</span><span class='style2'>ಮಹೀ॒ಯತೇ᳚</span> |<p><span class='style1'>ಧ॒ನಂ</span><span class='style2'>ಧಾ॒ನ್ಯಂ</span><span class='style1'>ಪ॒ಶುಂ</span><span class='style2'>ಬ॒ಹುಪು॑ತ್ರಲಾ॒ಭಂ¦</span><span class='style1'>ಶ॒ತಸಂ॑ವತ್ಸ॒ರಂ</span><span class='style2'>ದೀ॒ರ್ಘಮಾಯುಃ॑</span> ||[ವ:೪]||27|| 
+<span class='style1'>ಶ್ರೀ॒ವರ್ಚ॑ಸ್ವ॒ಮಾಯು॑ಷ್ಯ॒ಮಾರೋ᳚ಗ್ಯ॒ಮಾವಿ॑ಧಾ॒¦ಚ್ಚೋಭ॑ಮಾನಂ</span><span class='style2'>ಮಹೀ॒ಯತೇ᳚</span> |<p><span class='style1'>ಧ॒ನಂ</span><span class='style2'>ಧಾ॒ನ್ಯಂ</span><span class='style1'>ಪ॒ಶುಂ</span><span class='style2'>ಬ॒ಹುಪು॑ತ್ರಲಾ॒ಭಂ¦</span><span class='style1'>ಶ॒ತಸಂ॑ವತ್ಸ॒ರಂ</span><span class='style2'>ದೀ॒ರ್ಘಮಾಯುಃ॑</span> ||27||[ವ:೫] 
 </td>
 </tr>
 <tr>
@@ -528,7 +528,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಋ॒ಷ॒ಯ॒ಸ್ತು</span><span class='style2'>ತ॑ಪಸ್ತೇ॒ಪುಃ¦</span><span class='style1'>ಸ॒ರ್‍ವೇ</span><span class='style2'>ಸ್ವ॑ರ್ಗಜಿ॒ಗೀಷ॑ವಃ</span> |<p><span class='style1'>ತ॒ಪ॒ಸ॒ಸ್ತ॒ಪ॒ಸೋ॒ಗ್ರ್ಯಂ᳚ತು¦</span><span class='style2'>ಪಾ॒ವಮಾ᳚ನೀರೃ॒ಚೋಬ್ರ॑ವೀತ್</span><span class='style1'>[ವ:೧]</span> ||6|| 
+<span class='style1'>ಋ॒ಷ॒ಯ॒ಸ್ತು</span><span class='style2'>ತ॑ಪಸ್ತೇ॒ಪುಃ¦</span><span class='style1'>ಸ॒ರ್‍ವೇ</span><span class='style2'>ಸ್ವ॑ರ್ಗಜಿ॒ಗೀಷ॑ವಃ</span> |<p><span class='style1'>ತ॒ಪ॒ಸ॒ಸ್ತ॒ಪ॒ಸೋ॒ಗ್ರ್ಯಂ᳚ತು¦</span><span class='style2'>ಪಾ॒ವಮಾ᳚ನೀರೃ॒ಚೋಬ್ರ॑ವೀತ್</span> ||6||[ವ:೧] 
 </td>
 </tr>
 <tr>
@@ -558,7 +558,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಕ್ರಯ॑ವಿಕ್ರಯಾ॒ದ್‌</span><span class='style2'>ಯೋನಿ॑ದೋಷಾ॒ದ್‌¦</span><span class='style1'>ಭಕ್ಷಾ॒ದ್‌</span><span class='style2'>ಭೋಜ್ಯಾ᳚ತ್‌</span><span class='style1'>ಪ್ರ॒ತಿಗ್ರ॑ಹಾತ್</span> |<p><span class='style1'>ಅ॒ಸಂಭೋಜ॒ನಾಚ್ಚಾ᳚ಪಿ</span><span class='style2'>ನೃ॒ಶಂಸಂ॒¦</span><span class='style1'>ತತ್‌</span><span class='style2'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='style1'>ಪು॑ನಾಮಿ</span><span class='style2'>[ವ:೨]</span> ||12|| 
+<span class='style1'>ಕ್ರಯ॑ವಿಕ್ರಯಾ॒ದ್‌</span><span class='style2'>ಯೋನಿ॑ದೋಷಾ॒ದ್‌¦</span><span class='style1'>ಭಕ್ಷಾ॒ದ್‌</span><span class='style2'>ಭೋಜ್ಯಾ᳚ತ್‌</span><span class='style1'>ಪ್ರ॒ತಿಗ್ರ॑ಹಾತ್</span> |<p><span class='style1'>ಅ॒ಸಂಭೋಜ॒ನಾಚ್ಚಾ᳚ಪಿ</span><span class='style2'>ನೃ॒ಶಂಸಂ॒¦</span><span class='style1'>ತತ್‌</span><span class='style2'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='style1'>ಪು॑ನಾಮಿ</span> ||12||[ವ:೨] 
 </td>
 </tr>
 <tr>
@@ -603,7 +603,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಏತತ್‌</span><span class='style2'>ಪು॒ಣ್ಯಂ</span><span class='style1'>ಪಾ᳚ಪಹ॒ರಂ¦</span><span class='style2'>ರೋ॒ಗಮೃ॑ತ್ಯುಭ॒ಯಾಪ॑ಹಂ</span> |<p><span class='style1'>ಪಠ॑ತಾಂ</span><span class='style2'>ಶೃಣ್ವ॑ತಾಂ</span><span class='style1'>ಚೈ॒ವ¦</span><span class='style2'>ದ॒ದಾತಿ॑</span><span class='style1'>ಪರ॒ಮಾಂ</span><span class='style2'>ಗ॑ತಿಂ</span> [ವ:೩]||21|| 
+<span class='style1'>ಏತತ್‌</span><span class='style2'>ಪು॒ಣ್ಯಂ</span><span class='style1'>ಪಾ᳚ಪಹ॒ರಂ¦</span><span class='style2'>ರೋ॒ಗಮೃ॑ತ್ಯುಭ॒ಯಾಪ॑ಹಂ</span> |<p><span class='style1'>ಪಠ॑ತಾಂ</span><span class='style2'>ಶೃಣ್ವ॑ತಾಂ</span><span class='style1'>ಚೈ॒ವ¦</span><span class='style2'>ದ॒ದಾತಿ॑</span><span class='style1'>ಪರ॒ಮಾಂ</span><span class='style2'>ಗ॑ತಿಂ</span> ||21||[ವ:೩] 
 </td>
 </tr>
 <tr>
@@ -802,7 +802,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಅ॒ಗ್ನೇಃ</span><span class='style2'>ಪ್ರಜಾ᳚ತಂ॒</span><span class='style1'>ಪರಿ॒</span><span class='style2'>ಯದ್ಧಿರ᳚ಣ್ಯ¦ಮ॒ಮೃತಂ᳚</span><span class='style1'>ಯ॒ಜ್ಞೇ,</span><span class='style2'>ಅಧಿ॒</span><span class='style1'>ಮರ್‍ತ್ಯೇ᳚ಷು</span> |<p><span class='style1'>ಯ</span><span class='style2'>ಏ᳚ನ॒ದ್‌</span><span class='style1'>ವೇದ॒</span><span class='style2'>ಸ</span><span class='style1'>ಇದೇ᳚ನಮರ್ಹತಿ¦</span><span class='style2'>ಜ॒ರಾಮೃ॒ತ್ಯುರ್ಭ॑ವತಿ॒</span><span class='style1'>ಯೋ</span><span class='style2'>ಬಿ॒ಭರ್‍ತಿ॑</span> [ವ:೧]||5|| 
+<span class='style1'>ಅ॒ಗ್ನೇಃ</span><span class='style2'>ಪ್ರಜಾ᳚ತಂ॒</span><span class='style1'>ಪರಿ॒</span><span class='style2'>ಯದ್ಧಿರ᳚ಣ್ಯ¦ಮ॒ಮೃತಂ᳚</span><span class='style1'>ಯ॒ಜ್ಞೇ,</span><span class='style2'>ಅಧಿ॒</span><span class='style1'>ಮರ್‍ತ್ಯೇ᳚ಷು</span> |<p><span class='style1'>ಯ</span><span class='style2'>ಏ᳚ನ॒ದ್‌</span><span class='style1'>ವೇದ॒</span><span class='style2'>ಸ</span><span class='style1'>ಇದೇ᳚ನಮರ್ಹತಿ¦</span><span class='style2'>ಜ॒ರಾಮೃ॒ತ್ಯುರ್ಭ॑ವತಿ॒</span><span class='style1'>ಯೋ</span><span class='style2'>ಬಿ॒ಭರ್‍ತಿ॑</span> ||5||[ವ:೧] 
 </td>
 </tr>
 <tr>
@@ -842,7 +842,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ವಿ॒ರಾಜ್ಯೇನ॒</span><span class='style2'>ವಿರಾ᳚ಜತಿ॒¦</span><span class='style1'>ತೇನಾ॒ಸ್ಮಾನ್‌</span><span class='style2'>ಬ್ರ᳚ಹ್ಮಣಸ್ಪತೇ॒¦</span><span class='style1'>ವಿರಾ᳚ಜ</span><span class='style2'>ಸ॒ಮಿಧಂ᳚</span><span class='style1'>ಕುರು</span> [ವ:೨]||13|| 
+<span class='style1'>ವಿ॒ರಾಜ್ಯೇನ॒</span><span class='style2'>ವಿರಾ᳚ಜತಿ॒¦</span><span class='style1'>ತೇನಾ॒ಸ್ಮಾನ್‌</span><span class='style2'>ಬ್ರ᳚ಹ್ಮಣಸ್ಪತೇ॒¦</span><span class='style1'>ವಿರಾ᳚ಜ</span><span class='style2'>ಸ॒ಮಿಧಂ᳚</span><span class='style1'>ಕುರು</span> ||13||[ವ:೨] 
 </td>
 </tr>
 <tr>
@@ -870,7 +870,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಶರೀ᳚ರಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ವಿಚ॑ಕ್ಷಣಂ॒¦</span><span class='style2'>ವಾಙ್‌</span><span class='style1'>ಮೇ॒</span><span class='style2'>ಮಧು॑ಮ॒ದ್‌</span><span class='style1'>ದುಹಾಂ᳚</span> |<p><span class='style1'>ಆವೃ॑ದ್ಧಮ॒ಹಮ॒ಸೌ</span><span class='style2'>ಸೂರ್‍ಯೋ॒</span><span class='style1'>ಬ್ರಹ್ಮ॑ಣಾ॒ನಿ</span><span class='style2'>ಸ್ಥಃ॑¦</span><span class='style1'>ಶ್ರು॒ತಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ಮಾ</span><span class='style2'>ಪ್ರ</span><span class='style1'>ಹಾ᳚ಸೀಃ</span> ||5|| 
+<span class='style1'>ಶರೀ᳚ರಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ವಿಚ॑ಕ್ಷಣಂ॒¦</span><span class='style2'>ವಾಙ್‌</span><span class='style1'>ಮೇ॒</span><span class='style2'>ಮಧು॑ಮ॒ದ್‌</span><span class='style1'>ದುಹಾಂ᳚</span> |<p><span class='style1'>ಆವೃ॑ದ್ಧಮ॒ಹಮ॒ಸೌ</span><span class='style2'>ಸೂರ್‍ಯೋ॒</span><span class='style1'>ಬ್ರಹ್ಮ॑ಣಾ॒ನಿ</span><span class='style2'>ಸ್ಥಃ॑¦</span><span class='style1'>ಶ್ರು॒ತಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ಮಾ</span><span class='style2'>ಪ್ರ</span><span class='style1'>ಹಾ᳚ಸೀಃ</span> ||5||[ವ:೧] 
 </td>
 </tr>
 <tr>
@@ -900,7 +900,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಬ್ರ॒ಹ್ಮ॒ವೃ॒ಕ್ಷ</span><span class='style2'>ಪ॑ಲಾಶ॒</span><span class='style1'>ತ್ವಂ¦</span><span class='style2'>ಶ್ರ॒ದ್ಧಾಂ</span><span class='style1'>ಮೇ᳚ಧಾಂ</span><span class='style2'>ಚ॒</span><span class='style1'>ದೇಹಿ॑</span><span class='style2'>ಮೇ</span> |<p><span class='style1'>ವೃ॒ಕ್ಷಾ॒ಧಿ॒ಪ</span><span class='style2'>ನ॑ಮಸ್ತೇ॒ಽಸ್ತು¦</span><span class='style1'>ಅ॒ತ್ರ</span><span class='style2'>ತ್ವಂ᳚</span><span class='style1'>ಸನ್ನಿ॒ಧೌ</span><span class='style2'>ಭ॒ವ</span> ||11|| 
+<span class='style1'>ಬ್ರ॒ಹ್ಮ॒ವೃ॒ಕ್ಷ</span><span class='style2'>ಪ॑ಲಾಶ॒</span><span class='style1'>ತ್ವಂ¦</span><span class='style2'>ಶ್ರ॒ದ್ಧಾಂ</span><span class='style1'>ಮೇ᳚ಧಾಂ</span><span class='style2'>ಚ॒</span><span class='style1'>ದೇಹಿ॑</span><span class='style2'>ಮೇ</span> |<p><span class='style1'>ವೃ॒ಕ್ಷಾ॒ಧಿ॒ಪ</span><span class='style2'>ನ॑ಮಸ್ತೇ॒ಽಸ್ತು¦</span><span class='style1'>ಅ॒ತ್ರ</span><span class='style2'>ತ್ವಂ᳚</span><span class='style1'>ಸನ್ನಿ॒ಧೌ</span><span class='style2'>ಭ॒ವ</span> ||11||[ವ:೨] 
 </td>
 </tr>
 <tr>
@@ -941,7 +941,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಸು॒ಷಾ॒ರ॒ಥಿರಶ್ವಾ᳚ನಿವ॒</span><span class='style2'>ಯನ್ಮ॑ನು॒ಷ್ಯಾ᳚ನ್‌¦</span><span class='style1'>ನೇನೀ॒ಯತೇ॒ಽಭಿಶು॑ಭಿರ್‌ವಾ॒ಜಿನ॑</span><span class='style2'>ಇವ</span> |<p><span class='style1'>ಹೃತ್‌ಪ್ರತಿ॑ಷ್ಠಂ॒</span><span class='style2'>ಯದ॑ಜಿ॒ರಂ</span><span class='style1'>ಯವಿ॑ಷ್ಠಂ॒¦</span><span class='style2'>ತನ್ಮೇ॒</span><span class='style1'>ಮನಃ॑</span><span class='style2'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||[ವ:೧]||6|| 
+<span class='style1'>ಸು॒ಷಾ॒ರ॒ಥಿರಶ್ವಾ᳚ನಿವ॒</span><span class='style2'>ಯನ್ಮ॑ನು॒ಷ್ಯಾ᳚ನ್‌¦</span><span class='style1'>ನೇನೀ॒ಯತೇ॒ಽಭಿಶು॑ಭಿರ್‌ವಾ॒ಜಿನ॑</span><span class='style2'>ಇವ</span> |<p><span class='style1'>ಹೃತ್‌ಪ್ರತಿ॑ಷ್ಠಂ॒</span><span class='style2'>ಯದ॑ಜಿ॒ರಂ</span><span class='style1'>ಯವಿ॑ಷ್ಠಂ॒¦</span><span class='style2'>ತನ್ಮೇ॒</span><span class='style1'>ಮನಃ॑</span><span class='style2'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||6||[ವ:೧] 
 </td>
 </tr>
 <tr>
@@ -966,7 +966,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಯಸ್ಯೇ॒ದಂ</span><span class='style2'>ಧೀರಾಃ᳚</span><span class='style1'>ಪು॒ನಂತಿ॑</span><span class='style2'>ಕ॒ವಯೋ᳚¦</span><span class='style1'>ಬ್ರ॒ಹ್ಮಾಣ॑ಮೇ॒ತಂ</span><span class='style2'>ವ್ಯಾವೃ॑ಣುತ॒</span><span class='style1'>ಇಂದುಂ᳚</span> |<p><span class='style1'>ಸ್ಥಾವ॒ರಂ</span><span class='style2'>ಜಂಗ॑ಮಂ</span><span class='style1'>ಚ॒</span><span class='style2'>ದ್ಯೌರಾ᳚ಕಾ॒ಶಂ¦</span><span class='style1'>ತನ್ಮೇ॒</span><span class='style2'>ಮನಃ॑</span><span class='style1'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||[ವ:೨]||11|| 
+<span class='style1'>ಯಸ್ಯೇ॒ದಂ</span><span class='style2'>ಧೀರಾಃ᳚</span><span class='style1'>ಪು॒ನಂತಿ॑</span><span class='style2'>ಕ॒ವಯೋ᳚¦</span><span class='style1'>ಬ್ರ॒ಹ್ಮಾಣ॑ಮೇ॒ತಂ</span><span class='style2'>ವ್ಯಾವೃ॑ಣುತ॒</span><span class='style1'>ಇಂದುಂ᳚</span> |<p><span class='style1'>ಸ್ಥಾವ॒ರಂ</span><span class='style2'>ಜಂಗ॑ಮಂ</span><span class='style1'>ಚ॒</span><span class='style2'>ದ್ಯೌರಾ᳚ಕಾ॒ಶಂ¦</span><span class='style1'>ತನ್ಮೇ॒</span><span class='style2'>ಮನಃ॑</span><span class='style1'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||11||[ವ:೨] 
 </td>
 </tr>
 <tr>
@@ -991,7 +991,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಯೇನೇ॒ದಂ</span><span class='style2'>ಸರ್‍ವಂ॒</span><span class='style1'>ಜಗ॑ತೋ</span><span class='style2'>ಬ॒ಭೂವ॒¦</span><span class='style1'>ಯದ್ದೇ॒ವಾ,</span><span class='style2'>ಅಪಿ॑</span><span class='style1'>ಮಹ॒ತೋ</span><span class='style2'>ಜಾ॒ತವೇ᳚ದಾಃ</span> |<p><span class='style1'>ಯದೇ॒ವಾಗ್ರ್ಯಂ॒</span><span class='style2'>ತಪ॑ಸೋ॒</span><span class='style1'>ಜ್ಯೋತಿ॒ರೇಕಂ॒¦</span><span class='style2'>ತನ್ಮೇ॒</span><span class='style1'>ಮನಃ॑</span><span class='style2'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||[ವ:೩]||16|| 
+<span class='style1'>ಯೇನೇ॒ದಂ</span><span class='style2'>ಸರ್‍ವಂ॒</span><span class='style1'>ಜಗ॑ತೋ</span><span class='style2'>ಬ॒ಭೂವ॒¦</span><span class='style1'>ಯದ್ದೇ॒ವಾ,</span><span class='style2'>ಅಪಿ॑</span><span class='style1'>ಮಹ॒ತೋ</span><span class='style2'>ಜಾ॒ತವೇ᳚ದಾಃ</span> |<p><span class='style1'>ಯದೇ॒ವಾಗ್ರ್ಯಂ॒</span><span class='style2'>ತಪ॑ಸೋ॒</span><span class='style1'>ಜ್ಯೋತಿ॒ರೇಕಂ॒¦</span><span class='style2'>ತನ್ಮೇ॒</span><span class='style1'>ಮನಃ॑</span><span class='style2'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||16||[ವ:೩] 
 </td>
 </tr>
 <tr>
@@ -1016,7 +1016,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಯೋ</span><span class='style2'>ವೈ᳚</span><span class='style1'>ವೇ॒ದ</span><span class='style2'>ಮ॑ಹಾದೇ॒ವಂ¦</span><span class='style1'>ಪ್ರ॒ಣವಂ᳚</span><span class='style2'>ಪುರು॒ಷೋತ್ತ॑ಮಂ</span> |<p><span class='style1'>ಓಂ॒ಕಾರಂ॒</span><span class='style2'>ಪರ॑ಮಾತ್ಮಾ॒ನಂ¦</span><span class='style1'>ತನ್ಮೇ॒</span><span class='style2'>ಮನಃ॑</span><span class='style1'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||[ವ:೪]||21|| 
+<span class='style1'>ಯೋ</span><span class='style2'>ವೈ᳚</span><span class='style1'>ವೇ॒ದ</span><span class='style2'>ಮ॑ಹಾದೇ॒ವಂ¦</span><span class='style1'>ಪ್ರ॒ಣವಂ᳚</span><span class='style2'>ಪುರು॒ಷೋತ್ತ॑ಮಂ</span> |<p><span class='style1'>ಓಂ॒ಕಾರಂ॒</span><span class='style2'>ಪರ॑ಮಾತ್ಮಾ॒ನಂ¦</span><span class='style1'>ತನ್ಮೇ॒</span><span class='style2'>ಮನಃ॑</span><span class='style1'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||21||[ವ:೪] 
 </td>
 </tr>
 <tr>
@@ -1041,7 +1041,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಅಸ್ತಿ॒</span><span class='style2'>ನಾಸ್ತಿ॑</span><span class='style1'>ವಿಪ॒ರೀತೋ᳚</span><span class='style2'>ಪ್ರ॒ವಾದೋ᳚¦</span><span class='style1'>ಽಸ್ತಿ॒</span><span class='style2'>ನಾಸ್ತಿ॒</span><span class='style1'>ಗುಹ್ಯಂ॒</span><span class='style2'>ವ</span><span class='style1'>ಇ॒ದಂ</span><span class='style2'>ಸರ್‍ವಂ᳚</span> |<p><span class='style1'>ಅಸ್ತಿ॒</span><span class='style2'>ನಾಸ್ತಿ॑</span><span class='style1'>ಪರಾ॒ತ್‌</span><span class='style2'>ಪರೋ᳚</span><span class='style1'>ಯತ್‌</span><span class='style2'>ಪರಂ॒¦</span><span class='style1'>ತನ್ಮೇ॒</span><span class='style2'>ಮನಃ॑</span><span class='style1'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||[ವ:೫]||26|| 
+<span class='style1'>ಅಸ್ತಿ॒</span><span class='style2'>ನಾಸ್ತಿ॑</span><span class='style1'>ವಿಪ॒ರೀತೋ᳚</span><span class='style2'>ಪ್ರ॒ವಾದೋ᳚¦</span><span class='style1'>ಽಸ್ತಿ॒</span><span class='style2'>ನಾಸ್ತಿ॒</span><span class='style1'>ಗುಹ್ಯಂ॒</span><span class='style2'>ವ</span><span class='style1'>ಇ॒ದಂ</span><span class='style2'>ಸರ್‍ವಂ᳚</span> |<p><span class='style1'>ಅಸ್ತಿ॒</span><span class='style2'>ನಾಸ್ತಿ॑</span><span class='style1'>ಪರಾ॒ತ್‌</span><span class='style2'>ಪರೋ᳚</span><span class='style1'>ಯತ್‌</span><span class='style2'>ಪರಂ॒¦</span><span class='style1'>ತನ್ಮೇ॒</span><span class='style2'>ಮನಃ॑</span><span class='style1'>ಶಿ॒ವಸಂ᳚ಕ॒ಲ್ಪಮ॑ಸ್ತು</span> ||26||[ವ:೫] 
 </td>
 </tr>
 <tr>
