--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1031,10 +1031,10 @@
 <td class='VargaStyle1'>அனூ᳚னோ॒த³த்ர॒ஹஸ்த॑யதோ॒,அத்³ரி॒ரார்ச॒ன்‌யேன॒த³ஶ॑மா॒ஸோநவ॑க்³வா꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>ரு॒ʼதம்ʼய॒தீஸ॒ரமா॒கா³,அ॑விந்த³॒த்³விஶ்வா᳚னிஸ॒த்யாங்கி³॑ராஶ்சகார॒(ஸ்வாஹா᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>விஶ்வே᳚,அ॒ஸ்யாவ்யுஷி॒மாஹி॑னாயா॒꞉ஸம்ʼயத்³‌கோ³பி⁴॒ரங்கி³॑ரஸோ॒நவ᳚ந்த |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உத்ஸ॑ஆஸாம்ʼபர॒மேஸ॒த⁴ஸ்த²॑ரு॒ʼதஸ்ய॑ப॒தா²ஸ॒ரமா᳚வித³॒த்³கா³꞉(ஸ்வாஹா᳚) || 8 || </td>
+<td class='VargaStyle1'>விஶ்வே᳚,அ॒ஸ்யாவ்யுஷி॒மாஹி॑னாயா॒꞉ஸம்ʼயத்³‌கோ³பி⁴॒ரங்கி³॑ரஸோ॒நவ᳚ந்த |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உத்ஸ॑ஆஸாம்ʼபர॒மேஸ॒த⁴ஸ்த²॑ரு॒ʼதஸ்ய॑ப॒தா²ஸ॒ரமா᳚வித³॒த்³‌கா³॒꞉(ஸ்வாஹா᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆஸூர்யோ᳚யாதுஸ॒ப்தாஶ்வ॒꞉,க்ஷேத்ரம்॒ʼயத³॑ஸ்யோர்வி॒யாதீ³᳚ர்க⁴யா॒தே² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>ர॒கு⁴꞉ஶ்யே॒ன꞉ப॑தய॒த³ந்தோ⁴॒,அச்சா²॒யுவா᳚க॒விர்தீ³᳚த³ய॒த்³கோ³ஷு॒க³ச்ச²॒ந்த்(ஸ்வாஹா᳚) || 9 || </td>
+<td class='VargaStyle1'>ஆஸூர்யோ᳚யாதுஸ॒ப்தாஶ்வ॒꞉,க்ஷேத்ரம்॒ʼயத³॑ஸ்யோர்வி॒யாதீ³᳚ர்க⁴யா॒தே² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>ர॒கு⁴꞉ஶ்யே॒ன꞉ப॑தய॒த³ந்தோ⁴॒,அச்சா²॒யுவா᳚க॒விர்தீ³᳚த³ய॒த்³‌கோ³ஷு॒க³ச்ச²॒ந்த்(ஸ்வாஹா᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஆஸூர்யோ᳚,அருஹச்சு²॒க்ரமர்ணோ(அ)யு॑க்த॒யத்³த⁴॒ரிதோ᳚வீ॒தப்ரு॑ʼஷ்டா²꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உ॒த்³னாநநாவ॑மனயந்த॒தீ⁴ரா᳚,ஆஶ்ருʼண்வ॒தீராபோ᳚,அ॒ர்வாக³॑திஷ்ட²॒‌ந்(ஸ்வாஹா᳚) || 10 || </td>
