--- a/Rigveda/SamhitaPatha/Tamil/Mandala/Format1/RVS-Tamil-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Tamil/Mandala/Format1/RVS-Tamil-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (மண்ட³ல: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1308,10 +1308,10 @@
 <td class='VargaStyle1'>அனூ᳚னோ॒த³த்ர॒ ஹஸ்த॑யதோ॒, அத்³ரி॒ரார்ச॒ன்‌ யேன॒ த³ஶ॑ மா॒ஸோ நவ॑க்³வா꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>ரு॒ʼதம்ʼ ய॒தீ ஸ॒ரமா॒ கா³, அ॑விந்த³॒த்³ விஶ்வா᳚னி ஸ॒த்யாங்கி³॑ராஶ்சகார ||<span class='MantraNumbering'>{7/11}{5.45.7}{5.4.1.7}{4.2.27.2}{399, 4028}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>விஶ்வே᳚, அ॒ஸ்யா வ்யுஷி॒ மாஹி॑னாயா॒꞉ ஸம்ʼ யத்³‌ கோ³பி⁴॒ரங்கி³॑ரஸோ॒ நவ᳚ந்த |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உத்ஸ॑ ஆஸாம்ʼ பர॒மே ஸ॒த⁴ஸ்த²॑ ரு॒ʼதஸ்ய॑ ப॒தா² ஸ॒ரமா᳚ வித³॒த்³கா³꞉ ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
+<td class='VargaStyle1'>விஶ்வே᳚, அ॒ஸ்யா வ்யுஷி॒ மாஹி॑னாயா॒꞉ ஸம்ʼ யத்³‌ கோ³பி⁴॒ரங்கி³॑ரஸோ॒ நவ᳚ந்த |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உத்ஸ॑ ஆஸாம்ʼ பர॒மே ஸ॒த⁴ஸ்த²॑ ரு॒ʼதஸ்ய॑ ப॒தா² ஸ॒ரமா᳚ வித³॒த்³‌ கா³꞉ ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆ ஸூர்யோ᳚ யாது ஸ॒ப்தாஶ்வ॒꞉, க்ஷேத்ரம்॒ʼ யத³॑ஸ்யோர்வி॒யா தீ³᳚ர்க⁴யா॒தே² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>ர॒கு⁴꞉ ஶ்யே॒ன꞉ ப॑தய॒த³ந்தோ⁴॒, அச்சா²॒ யுவா᳚ க॒விர்தீ³᳚த³ய॒த்³கோ³ஷு॒ க³ச்ச²॑ன் ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
+<td class='VargaStyle1'>ஆ ஸூர்யோ᳚ யாது ஸ॒ப்தாஶ்வ॒꞉, க்ஷேத்ரம்॒ʼ யத³॑ஸ்யோர்வி॒யா தீ³᳚ர்க⁴யா॒தே² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>ர॒கு⁴꞉ ஶ்யே॒ன꞉ ப॑தய॒த³ந்தோ⁴॒, அச்சா²॒ யுவா᳚ க॒விர்தீ³᳚த³ய॒த்³‌ கோ³ஷு॒ க³ச்ச²॑ன் ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஆ ஸூர்யோ᳚, அருஹச்சு²॒க்ரமர்ணோ(அ)யு॑க்த॒ யத்³த⁴॒ரிதோ᳚ வீ॒தப்ரு॑ʼஷ்டா²꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸதா³ப்ருʼண꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உ॒த்³னா ந நாவ॑மனயந்த॒ தீ⁴ரா᳚, ஆஶ்ருʼண்வ॒தீராபோ᳚, அ॒ர்வாக³॑திஷ்ட²ன் ||<span class='MantraNumbering'>{10/11}{5.45.10}{5.4.1.10}{4.2.27.5}{399, 4031}</span></td>
