--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1308,10 +1308,10 @@
 <td class='VargaStyle1'>అనూ᳚నో॒దత్ర॒ హస్త॑యతో॒, అద్రి॒రార్చ॒న్‌ యేన॒ దశ॑ మా॒సో నవ॑గ్వాః |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఋ॒తం య॒తీ స॒రమా॒ గా, అ॑వింద॒ద్ విశ్వా᳚ని స॒త్యాంగి॑రాశ్చకార ||<span class='MantraNumbering'>{7/11}{5.45.7}{5.4.1.7}{4.2.27.2}{399, 4028}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>విశ్వే᳚, అ॒స్యా వ్యుషి॒ మాహి॑నాయాః॒ సం యద్‌ గోభి॒రంగి॑రసో॒ నవం᳚త |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉత్స॑ ఆసాం పర॒మే స॒ధస్థ॑ ఋ॒తస్య॑ ప॒థా స॒రమా᳚ విద॒ద్గాః ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
+<td class='VargaStyle1'>విశ్వే᳚, అ॒స్యా వ్యుషి॒ మాహి॑నాయాః॒ సం యద్‌ గోభి॒రంగి॑రసో॒ నవం᳚త |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉత్స॑ ఆసాం పర॒మే స॒ధస్థ॑ ఋ॒తస్య॑ ప॒థా స॒రమా᳚ విద॒ద్‌ గాః ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆ సూర్యో᳚ యాతు స॒ప్తాశ్వః॒, క్షేత్రం॒ యద॑స్యోర్వి॒యా దీ᳚ర్ఘయా॒థే |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ర॒ఘుః శ్యే॒నః ప॑తయ॒దంధో॒, అచ్ఛా॒ యువా᳚ క॒విర్దీ᳚దయ॒ద్గోషు॒ గచ్ఛ॑న్ ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
+<td class='VargaStyle1'>ఆ సూర్యో᳚ యాతు స॒ప్తాశ్వః॒, క్షేత్రం॒ యద॑స్యోర్వి॒యా దీ᳚ర్ఘయా॒థే |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ర॒ఘుః శ్యే॒నః ప॑తయ॒దంధో॒, అచ్ఛా॒ యువా᳚ క॒విర్దీ᳚దయ॒ద్‌ గోషు॒ గచ్ఛ॑న్ ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఆ సూర్యో᳚, అరుహచ్ఛు॒క్రమర్ణోఽయు॑క్త॒ యద్ధ॒రితో᳚ వీ॒తపృ॑ష్ఠాః |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉ॒ద్నా న నావ॑మనయంత॒ ధీరా᳚, ఆశృణ్వ॒తీరాపో᳚, అ॒ర్వాగ॑తిష్ఠన్ ||<span class='MantraNumbering'>{10/11}{5.45.10}{5.4.1.10}{4.2.27.5}{399, 4031}</span></td>
