--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1019,22 +1019,22 @@
 <td class='VargaStyle2'>ಅ॒ಸ್ಮಾ,ಉ॒ಕ್ಥಾಯ॒ಪರ್‍ವ॑ತಸ್ಯ॒ಗರ್ಭೋ᳚ಮ॒ಹೀನಾಂ᳚ಜ॒ನುಷೇ᳚ಪೂ॒ರ್‍ವ್ಯಾಯ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಿಪರ್‍ವ॑ತೋ॒ಜಿಹೀ᳚ತ॒ಸಾಧ॑ತ॒ದ್ಯೌರಾ॒ವಿವಾ᳚ಸಂತೋದಸಯಂತ॒ಭೂಮ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಸೂ॒ಕ್ತೇಭಿ᳚ರ್ವೋ॒ವಚೋ᳚ಭಿರ್ದೇ॒ವಜು॑ಷ್ಟೈ॒ರಿಂದ್ರಾ॒ನ್ವ೧॑(ಅ॒)ಗ್ನೀ,ಅವ॑ಸೇಹು॒ವಧ್ಯೈ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಕ್ಥೇಭಿ॒ರ್ಹಿಷ್ಮಾ᳚ಕ॒ವಯಃ॑ಸುಯ॒ಜ್ಞಾ,ಆ॒ವಿವಾ᳚ಸಂತೋಮ॒ರುತೋ॒ಯಜಂ᳚ತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle2'>ಸೂ॒ಕ್ತೇಭಿ᳚ರ್ವೋ॒ವಚೋ᳚ಭಿರ್‌ದೇ॒ವಜು॑ಷ್ಟೈ॒ರಿಂದ್ರಾ॒ನ್ವ೧॑(ಅ॒)ಗ್ನೀ,ಅವ॑ಸೇಹು॒ವಧ್ಯೈ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಕ್ಥೇಭಿ॒ರ್ಹಿಷ್ಮಾ᳚ಕ॒ವಯಃ॑ಸುಯ॒ಜ್ಞಾ,ಆ॒ವಿವಾ᳚ಸಂತೋಮ॒ರುತೋ॒ಯಜಂ᳚ತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಏತೋ॒ನ್ವ೧॑(ಅ॒)ದ್ಯಸು॒ಧ್ಯೋ॒೩॑(ಓ॒)ಭವಾ᳚ಮ॒ಪ್ರದು॒ಚ್ಛುನಾ᳚ಮಿನವಾಮಾ॒ವರೀ᳚ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ॒ರೇದ್ವೇಷಾಂ᳚ಸಿಸನು॒ತರ್‌ದ॑ಧಾ॒ಮಾಽಯಾ᳚ಮ॒ಪ್ರಾಂಚೋ॒ಯಜ॑ಮಾನ॒ಮಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಏತಾ॒ಧಿಯಂ᳚ಕೃ॒ಣವಾ᳚ಮಾಸಖಾ॒ಯೋಽಪ॒ಯಾಮಾ॒ತಾಁ,ಋ॑ಣು॒ತವ್ರ॒ಜಂಗೋಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಯಾ॒ಮನು᳚ರ್ವಿಶಿಶಿ॒ಪ್ರಂಜಿ॒ಗಾಯ॒ಯಯಾ᳚ವ॒ಣಿಗ್ವಂ॒ಕುರಾಪಾ॒ಪುರೀ᳚ಷ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:27</span></td>
+<td class='VargaStyle1'>ಏತಾ॒ಧಿಯಂ᳚ಕೃ॒ಣವಾ᳚ಮಾಸಖಾ॒ಯೋಽಪ॒ಯಾಮಾ॒ತಾಁ,ಋ॑ಣು॒ತವ್ರ॒ಜಂಗೋಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಯಾ॒ಮನು᳚ರ್‌ವಿಶಿಶಿ॒ಪ್ರಂಜಿ॒ಗಾಯ॒ಯಯಾ᳚ವ॒ಣಿಗ್ವಂ॒ಕುರಾಪಾ॒ಪುರೀ᳚ಷ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:27</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅನೂ᳚ನೋ॒ದತ್ರ॒ಹಸ್ತ॑ಯತೋ॒,ಅದ್ರಿ॒ರಾರ್ಚ॒ನ್‌ಯೇನ॒ದಶ॑ಮಾ॒ಸೋನವ॑ಗ್ವಾಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಋ॒ತಂಯ॒ತೀಸ॒ರಮಾ॒ಗಾ,ಅ॑ವಿಂದ॒ದ್‌ವಿಶ್ವಾ᳚ನಿಸ॒ತ್ಯಾಂಗಿ॑ರಾಶ್ಚಕಾರ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಶ್ವೇ᳚,ಅ॒ಸ್ಯಾವ್ಯುಷಿ॒ಮಾಹಿ॑ನಾಯಾಃ॒ಸಂಯದ್‌ಗೋಭಿ॒ರಂಗಿ॑ರಸೋ॒ನವಂ᳚ತ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉತ್ಸ॑ಆಸಾಂಪರ॒ಮೇಸ॒ಧಸ್ಥ॑ಋ॒ತಸ್ಯ॑ಪ॒ಥಾಸ॒ರಮಾ᳚ವಿದ॒ದ್ಗಾಃ(ಸ್ವಾಹಾ᳚) || 8 || </td>
+<td class='VargaStyle1'>ವಿಶ್ವೇ᳚,ಅ॒ಸ್ಯಾವ್ಯುಷಿ॒ಮಾಹಿ॑ನಾಯಾಃ॒ಸಂಯದ್‌ಗೋಭಿ॒ರಂಗಿ॑ರಸೋ॒ನವಂ᳚ತ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉತ್ಸ॑ಆಸಾಂಪರ॒ಮೇಸ॒ಧಸ್ಥ॑ಋ॒ತಸ್ಯ॑ಪ॒ಥಾಸ॒ರಮಾ᳚ವಿದ॒ದ್‌ಗಾಃ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆಸೂರ್‍ಯೋ᳚ಯಾತುಸ॒ಪ್ತಾಶ್ವಃ॒,ಕ್ಷೇತ್ರಂ॒ಯದ॑ಸ್ಯೋರ್‍ವಿ॒ಯಾದೀ᳚ರ್ಘಯಾ॒ಥೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರ॒ಘುಃಶ್ಯೇ॒ನಃಪ॑ತಯ॒ದಂಧೋ॒,ಅಚ್ಛಾ॒ಯುವಾ᳚ಕ॒ವಿರ್ದೀ᳚ದಯ॒ದ್ಗೋಷು॒ಗಚ್ಛಂ॒ತ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
+<td class='VargaStyle1'>ಆಸೂರ್‍ಯೋ᳚ಯಾತುಸ॒ಪ್ತಾಶ್ವಃ॒,ಕ್ಷೇತ್ರಂ॒ಯದ॑ಸ್ಯೋರ್‍ವಿ॒ಯಾದೀ᳚ರ್ಘಯಾ॒ಥೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರ॒ಘುಃಶ್ಯೇ॒ನಃಪ॑ತಯ॒ದಂಧೋ॒,ಅಚ್ಛಾ॒ಯುವಾ᳚ಕ॒ವಿರ್ದೀ᳚ದಯ॒ದ್‌ಗೋಷು॒ಗಚ್ಛಂ॒ತ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಆಸೂರ್‍ಯೋ᳚,ಅರುಹಚ್ಛು॒ಕ್ರಮರ್ಣೋಽಯು॑ಕ್ತ॒ಯದ್ಧ॒ರಿತೋ᳚ವೀ॒ತಪೃ॑ಷ್ಠಾಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ದ್ನಾನನಾವ॑ಮನಯಂತ॒ಧೀರಾ᳚,ಆಶೃಣ್ವ॒ತೀರಾಪೋ᳚,ಅ॒ರ್‍ವಾಗ॑ತಿಷ್ಠ॒‌ನ್(ಸ್ವಾಹಾ᳚) || 10 || </td>
