--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1308,10 +1308,10 @@
 <td class='VargaStyle1'>അനൂ᳚നോ॒ദത്ര॒ ഹസ്ത॑യതോ॒, അദ്രി॒രാർച॒ൻ‌ യേന॒ ദശ॑ മാ॒സോ നവ॑ഗ്വാഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഋ॒തം യ॒തീ സ॒രമാ॒ ഗാ, അ॑വിന്ദ॒ദ് വിശ്വാ᳚നി സ॒ത്യാംഗി॑രാശ്ചകാര ||<span class='MantraNumbering'>{7/11}{5.45.7}{5.4.1.7}{4.2.27.2}{399, 4028}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വിശ്വേ᳚, അ॒സ്യാ വ്യുഷി॒ മാഹി॑നായാഃ॒ സം യദ്‌ ഗോഭി॒രംഗി॑രസോ॒ നവ᳚ന്ത |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉത്സ॑ ആസാം പര॒മേ സ॒ധസ്ഥ॑ ഋ॒തസ്യ॑ പ॒ഥാ സ॒രമാ᳚ വിദ॒ദ്ഗാഃ ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
+<td class='VargaStyle1'>വിശ്വേ᳚, അ॒സ്യാ വ്യുഷി॒ മാഹി॑നായാഃ॒ സം യദ്‌ ഗോഭി॒രംഗി॑രസോ॒ നവ᳚ന്ത |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉത്സ॑ ആസാം പര॒മേ സ॒ധസ്ഥ॑ ഋ॒തസ്യ॑ പ॒ഥാ സ॒രമാ᳚ വിദ॒ദ്‌ ഗാഃ ||<span class='MantraNumbering'>{8/11}{5.45.8}{5.4.1.8}{4.2.27.3}{399, 4029}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആ സൂര്യോ᳚ യാതു സ॒പ്താശ്വഃ॒, ക്ഷേത്രം॒ യദ॑സ്യോർവി॒യാ ദീ᳚ർഘയാ॒ഥേ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ര॒ഘുഃ ശ്യേ॒നഃ പ॑തയ॒ദന്ധോ॒, അച്ഛാ॒ യുവാ᳚ ക॒വിർദീ᳚ദയ॒ദ്ഗോഷു॒ ഗച്ഛ॑ൻ ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
+<td class='VargaStyle1'>ആ സൂര്യോ᳚ യാതു സ॒പ്താശ്വഃ॒, ക്ഷേത്രം॒ യദ॑സ്യോർവി॒യാ ദീ᳚ർഘയാ॒ഥേ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ര॒ഘുഃ ശ്യേ॒നഃ പ॑തയ॒ദന്ധോ॒, അച്ഛാ॒ യുവാ᳚ ക॒വിർദീ᳚ദയ॒ദ്‌ ഗോഷു॒ ഗച്ഛ॑ൻ ||<span class='MantraNumbering'>{9/11}{5.45.9}{5.4.1.9}{4.2.27.4}{399, 4030}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ആ സൂര്യോ᳚, അരുഹച്ഛു॒ക്രമർണോഽയു॑ക്ത॒ യദ്ധ॒രിതോ᳚ വീ॒തപൃ॑ഷ്ഠാഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉ॒ദ്നാ ന നാവ॑മനയന്ത॒ ധീരാ᳚, ആശൃണ്വ॒തീരാപോ᳚, അ॒ർവാഗ॑തിഷ്ഠൻ ||<span class='MantraNumbering'>{10/11}{5.45.10}{5.4.1.10}{4.2.27.5}{399, 4031}</span></td>
