--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1355,10 +1355,10 @@
 <td class='VargaStyle1'>അനൂ᳚നോ॒ദത്ര॒ഹസ്ത॑യതോ॒,അദ്രി॒രാർച॒ൻ‌യേന॒ദശ॑മാ॒സോനവ॑ഗ്വാഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഋ॒തംയ॒തീസ॒രമാ॒ഗാ,അ॑വിന്ദ॒ദ്വിശ്വാ᳚നിസ॒ത്യാംഗി॑രാശ്ചകാര॒(സ്വാഹാ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വിശ്വേ᳚,അ॒സ്യാവ്യുഷി॒മാഹി॑നായാഃ॒സംയദ്‌ഗോഭി॒രംഗി॑രസോ॒നവ᳚ന്ത |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉത്സ॑ആസാംപര॒മേസ॒ധസ്ഥ॑ഋ॒തസ്യ॑പ॒ഥാസ॒രമാ᳚വിദ॒ദ്ഗാഃ(സ്വാഹാ᳚) || 8 || </td>
+<td class='VargaStyle1'>വിശ്വേ᳚,അ॒സ്യാവ്യുഷി॒മാഹി॑നായാഃ॒സംയദ്‌ഗോഭി॒രംഗി॑രസോ॒നവ᳚ന്ത |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉത്സ॑ആസാംപര॒മേസ॒ധസ്ഥ॑ഋ॒തസ്യ॑പ॒ഥാസ॒രമാ᳚വിദ॒ദ്‌ഗാഃ॒(സ്വാഹാ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആസൂര്യോ᳚യാതുസ॒പ്താശ്വഃ॒,ക്ഷേത്രം॒യദ॑സ്യോർവി॒യാദീ᳚ർഘയാ॒ഥേ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ര॒ഘുഃശ്യേ॒നഃപ॑തയ॒ദന്ധോ॒,അച്ഛാ॒യുവാ᳚ക॒വിർദീ᳚ദയ॒ദ്ഗോഷു॒ഗച്ഛ॒ന്ത്(സ്വാഹാ᳚) || 9 || </td>
+<td class='VargaStyle1'>ആസൂര്യോ᳚യാതുസ॒പ്താശ്വഃ॒,ക്ഷേത്രം॒യദ॑സ്യോർവി॒യാദീ᳚ർഘയാ॒ഥേ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ര॒ഘുഃശ്യേ॒നഃപ॑തയ॒ദന്ധോ॒,അച്ഛാ॒യുവാ᳚ക॒വിർദീ᳚ദയ॒ദ്‌ഗോഷു॒ഗച്ഛ॒ന്ത്(സ്വാഹാ᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ആസൂര്യോ᳚,അരുഹച്ഛു॒ക്രമർണോഽയു॑ക്ത॒യദ്ധ॒രിതോ᳚വീ॒തപൃ॑ഷ്ഠാഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സദാപൃണഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉ॒ദ്നാനനാവ॑മനയന്ത॒ധീരാ᳚,ആശൃണ്വ॒തീരാപോ᳚,അ॒ർവാഗ॑തിഷ്ഠ॒‌ന്(സ്വാഹാ᳚) || 10 || </td>
