--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1031,10 +1031,10 @@
 <td class='VargaStyle1'>అనూ᳚నో॒దత్ర॒హస్త॑యతో॒,అద్రి॒రార్చ॒న్‌యేన॒దశ॑మా॒సోనవ॑గ్వాః |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఋ॒తంయ॒తీస॒రమా॒గా,అ॑వింద॒ద్విశ్వా᳚నిస॒త్యాంగి॑రాశ్చకార॒(స్వాహా᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>విశ్వే᳚,అ॒స్యావ్యుషి॒మాహి॑నాయాః॒సంయద్‌గోభి॒రంగి॑రసో॒నవం᳚త |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉత్స॑ఆసాంపర॒మేస॒ధస్థ॑ఋ॒తస్య॑ప॒థాస॒రమా᳚విద॒ద్గాః(స్వాహా᳚) || 8 || </td>
+<td class='VargaStyle1'>విశ్వే᳚,అ॒స్యావ్యుషి॒మాహి॑నాయాః॒సంయద్‌గోభి॒రంగి॑రసో॒నవం᳚త |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉత్స॑ఆసాంపర॒మేస॒ధస్థ॑ఋ॒తస్య॑ప॒థాస॒రమా᳚విద॒ద్‌గాః॒(స్వాహా᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆసూర్యో᳚యాతుస॒ప్తాశ్వః॒,క్షేత్రం॒యద॑స్యోర్వి॒యాదీ᳚ర్ఘయా॒థే |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ర॒ఘుఃశ్యే॒నఃప॑తయ॒దంధో॒,అచ్ఛా॒యువా᳚క॒విర్దీ᳚దయ॒ద్గోషు॒గచ్ఛం॒త్(స్వాహా᳚) || 9 || </td>
+<td class='VargaStyle1'>ఆసూర్యో᳚యాతుస॒ప్తాశ్వః॒,క్షేత్రం॒యద॑స్యోర్వి॒యాదీ᳚ర్ఘయా॒థే |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ర॒ఘుఃశ్యే॒నఃప॑తయ॒దంధో॒,అచ్ఛా॒యువా᳚క॒విర్దీ᳚దయ॒ద్‌గోషు॒గచ్ఛం॒త్(స్వాహా᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఆసూర్యో᳚,అరుహచ్ఛు॒క్రమర్ణోఽయు॑క్త॒యద్ధ॒రితో᳚వీ॒తపృ॑ష్ఠాః |<span class='RishiDevChandas'>{ఆత్రేయః సదాపృణః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉ॒ద్నాననావ॑మనయంత॒ధీరా᳚,ఆశృణ్వ॒తీరాపో᳚,అ॒ర్వాగ॑తిష్ఠ॒‌న్(స్వాహా᳚) || 10 || </td>
