--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format3/RVS-Telugu-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format3/RVS-Telugu-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 19-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1355,10 +1355,10 @@
 <td class='VargaStyle1'>అనూ᳚నో॒దత్ర॒హస్త॑యతో॒,అద్రి॒రార్చ॒న్‌యేన॒దశ॑మా॒సోనవ॑గ్వాః |<p>ఋ॒తంయ॒తీస॒రమా॒గా,అ॑వింద॒ద్విశ్వా᳚నిస॒త్యాంగి॑రాశ్చకార || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>విశ్వే᳚,అ॒స్యావ్యుషి॒మాహి॑నాయాః॒సంయద్‌గోభి॒రంగి॑రసో॒నవం᳚త |<p>ఉత్స॑ఆసాంపర॒మేస॒ధస్థ॑ఋ॒తస్య॑ప॒థాస॒రమా᳚విద॒ద్గాః || 8 || </td>
+<td class='VargaStyle1'>విశ్వే᳚,అ॒స్యావ్యుషి॒మాహి॑నాయాః॒సంయద్‌గోభి॒రంగి॑రసో॒నవం᳚త |<p>ఉత్స॑ఆసాంపర॒మేస॒ధస్థ॑ఋ॒తస్య॑ప॒థాస॒రమా᳚విద॒ద్‌గాః || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆసూర్యో᳚యాతుస॒ప్తాశ్వః॒,క్షేత్రం॒యద॑స్యోర్వి॒యాదీ᳚ర్ఘయా॒థే |<p>ర॒ఘుఃశ్యే॒నఃప॑తయ॒దంధో॒,అచ్ఛా॒యువా᳚క॒విర్దీ᳚దయ॒ద్గోషు॒గచ్ఛ॑న్ || 9 || </td>
+<td class='VargaStyle1'>ఆసూర్యో᳚యాతుస॒ప్తాశ్వః॒,క్షేత్రం॒యద॑స్యోర్వి॒యాదీ᳚ర్ఘయా॒థే |<p>ర॒ఘుఃశ్యే॒నఃప॑తయ॒దంధో॒,అచ్ఛా॒యువా᳚క॒విర్దీ᳚దయ॒ద్‌గోషు॒గచ్ఛ॑న్ || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఆసూర్యో᳚,అరుహచ్ఛు॒క్రమర్ణోఽయు॑క్త॒యద్ధ॒రితో᳚వీ॒తపృ॑ష్ఠాః |<p>ఉ॒ద్నాననావ॑మనయంత॒ధీరా᳚,ఆశృణ్వ॒తీరాపో᳚,అ॒ర్వాగ॑తిష్ఠన్ || 10 || </td>
